--- a/d012/index.html
+++ b/d012/index.html
@@ -10,74 +10,92 @@
 <body>
     <h1>
         Cordel Moderno        
-        <p> Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
+        <p id="h1"> 
+            Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
         </p>
     </h1>    
     
-    <main>
-        <p class="parte1">
-            Estou ficando cansado     <br>
-            Da tal tecnologia         <br>
-            Só se fala por e-mail     <br>
-            Mensagem curta e fria     <br>
-            Twitter e Facebook        <br>
-            Antes que eu caduque      <br>
-            Vou dizer tudo em poesia. <br>
-        </p>
-        <p class="parte2">
-            Não é mais como era antes <br>
-            É tudo abreviado          <br>
-            "Você" só tem duas letras <br>
-            O "O" e o "E" foi riscado <br>
-            Para declarar o amor      <br>
-            Basta botar uma flor      <br>
-            E um coração desenhado.   <br>
-        </p>
-        <p class="parte3">
-            Arroba agora não pesa   <br>
-            É parte de um endereço  <br>
-            Ponto final nem se usa  <br>
-            Ou vai até no começo    <br>
-            Agora é .com            <br>
-            Se o saite é muito bom  <br>
-            Ele vale um alto preço. <br>
-        </p>
-        <p class="parte4">
-            Pra piorar a liguagem           <br>
-            O emoticom é um risco           <br>
-            Tem símbolo para tudo           <br>
-            Ponto e vírgula e um asterisco  <br>
-            Um beijo significa              <br>
-            Pra entender como fica          <br>
-            Decifre esse rabisco.           <br>
-        </p>
-        <p class="parte5">
-            Tenho saudade das cartas    <br>
-            Escritas com a própria mão  <br>
-            Mandava no mês de Junho     <br>
-            Só chegava no Verão         <br>
-            Mas matava a saudade        <br>
-            Era texto de verdade        <br>
-            Nas linhas do coração.      <br>
-        </p>
-        <p class="parte6">
-            Agora, escrevo e envio  <br>
-            Chegando na mesma hora  <br>
-            Mas quando vou prosear  <br>
-            A pessoa foi embora     <br>
-            Abriu outro aplicativo  <br>
-            O mundo ficou cativo    <br>
-            Da tecnologia do agora. <br>
-        </p>
-        <p class="parte7">
-            Felizmente, pra orar         <br>
-            Não precisa de internet      <br>
-            Deus escuta todo mundo       <br>
-            Se quiser, faça esse teste   <br>
-            Dois pontos são dois joelhos <br>
-            Seus lábios são aparelhos    <br>
-            Deixe que Deus interprete.   <br>
-        </p>
+    <main>        
+        <div class="parte1">
+            <p>
+                Estou ficando cansado     <br>
+                Da tal tecnologia         <br>
+                Só se fala por e-mail     <br>
+                Mensagem curta e fria     <br>
+                Twitter e Facebook        <br>
+                Antes que eu caduque      <br>
+                Vou dizer tudo em poesia. <br>
+            </p>
+        </div>
+        <div class="parte2">
+            <p>
+                Não é mais como era antes <br>
+                É tudo abreviado          <br>
+                "Você" só tem duas letras <br>
+                O "O" e o "E" foi riscado <br>
+                Para declarar o amor      <br>
+                Basta botar uma flor      <br>
+                E um coração desenhado.   <br>
+            </p>
+        </div>
+        <div class="parte3">
+            <p>
+                Arroba agora não pesa   <br>
+                É parte de um endereço  <br>
+                Ponto final nem se usa  <br>
+                Ou vai até no começo    <br>
+                Agora é .com            <br>
+                Se o saite é muito bom  <br>
+                Ele vale um alto preço. <br>
+            </p>
+        </div>
+        <div class="parte4">
+            <p>
+                Pra piorar a liguagem           <br>
+                O emoticom é um risco           <br>
+                Tem símbolo para tudo           <br>
+                Ponto e vírgula e um asterisco  <br>
+                Um beijo significa              <br>
+                Pra entender como fica          <br>
+                Decifre esse rabisco.           <br>
+            </p>
+        </div>
+        <div class="parte5">
+            <p>
+                Tenho saudade das cartas    <br>
+                Escritas com a própria mão  <br>
+                Mandava no mês de Junho     <br>
+                Só chegava no Verão         <br>
+                Mas matava a saudade        <br>
+                Era texto de verdade        <br>
+                Nas linhas do coração.      <br>
+            </p>
+        </div>
+        <div class="parte6">
+            <p>
+                Agora, escrevo e envio  <br>
+                Chegando na mesma hora  <br>
+                Mas quando vou prosear  <br>
+                A pessoa foi embora     <br>
+                Abriu outro aplicativo  <br>
+                O mundo ficou cativo    <br>
+                Da tecnologia do agora. <br>
+            </p>
+        </div>
+        <div class="parte7">
+            <p>
+                Felizmente, pra orar         <br>
+                Não precisa de internet      <br>
+                Deus escuta todo mundo       <br>
+                Se quiser, faça esse teste   <br>
+                Dois pontos são dois joelhos <br>
+                Seus lábios são aparelhos    <br>
+                Deixe que Deus interprete.   <br>
+            </p>
+        </div>
     </main>
+    <footer>
+        <p class="rodape">Site criado por <a href="https://instagram.com/lucasvaldati" target="_blank">Lucas Valdati</a></p>
+    </footer>
 </body>
 </html>
