--- a/ex023/tabela001.html
+++ b/ex023/tabela001.html
@@ -11,13 +11,21 @@
         }
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
-        }
+        }       
 
         td {
             border: 1px solid black;
             padding: 8px;
+            text-align: center; /*Alinhamento horizontal*/
+            vertical-align: top; /*Alinhamento vertical*/
         }
+
+        .numero {
+            text-align: right;
+        }
+       
     </style>
 </head>
 <body>
@@ -35,21 +43,21 @@
             <td>B1</td>
             <td>C1</td>
         </tr>
-        <tr> <!-- Segunda linha -->
+        <tr class="linha"> <!-- Segunda linha -->
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
         <tr> <!-- Terceira linha -->
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
         <tr> <!-- Quarta linha -->
             <td>A4</td>
-            <td>B4</td>
+            <td class="dado">B4</td>
             <td>C4</td>
-        </tr>
+        </tr>        
     </table>
 </body>
 </html>
