--- a/ex023/tabela002.html
+++ b/ex023/tabela002.html
@@ -12,6 +12,7 @@
         table {
             width: 600px;
             border-collapse: collapse;
+            position: relative;
         }
 
         caption {
@@ -23,6 +24,12 @@
         thead, tfoot {
             background-color: gray;
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
         }
 
         tbody > tr:nth-child(2n) {
@@ -73,6 +80,114 @@
             </tr>
         </thead>
         <tbody>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">46.000.000</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">22.000.000</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">18.000.000</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">46.000.000</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">22.000.000</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">18.000.000</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">46.000.000</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">22.000.000</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">18.000.000</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">46.000.000</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">22.000.000</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">18.000.000</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">46.000.000</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">22.000.000</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">18.000.000</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">46.000.000</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">22.000.000</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">18.000.000</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">46.000.000</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">22.000.000</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">18.000.000</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">46.000.000</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">22.000.000</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">18.000.000</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">46.000.000</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">22.000.000</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">18.000.000</td>
+            </tr>
             <tr>
                 <td>São Paulo</td>
                 <td class="num">46.000.000</td>
