--- a/d014/index.html
+++ b/d014/index.html
@@ -5,26 +5,98 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
+    <style>
+        table {
+            font-family: Arial, Helvetica, sans-serif;
+            border-collapse: collapse;
+        }
+        th, .media {
+            background-color: gray;
+            color: white;
+            font-weight: bold;
+            text-align: left;
+        }
+        .vlmedia {
+            background-color: gray;
+            color: white;
+            font-weight: bold;
+            text-align: center;
+        }
+
+        .disciplina {
+            text-align: left;
+        }
+        
+        
+        th, td {
+            border: 1px solid black;
+            padding: 10px;
+            width: 400px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <table>
         <thead>
             <tr>
-                <th>Área</th>
-                <th>Disciplinas</th>
-                <th>Notas</th>
-                <th>Média</th>
+                <th rowspan="2">Área</th>
+                <th rowspan="2">Disciplinas</th>
+                <th colspan="2">Notas</th>
+                <th rowspan="2">Média</th>
             </tr>
             <tr>
                 <th>Nota 1</th>
                 <th>Nota 2</th>
             </tr>
-            <tr>
-                <td>Exatas</td>
-            </tr>
-        </thead>
+        </thead>               
         <tbody>
-
+            <tr>
+                <td rowspan="4"><strong>Exatas</strong></td>
+                <td class="disciplina">Matemática</td>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <td class="disciplina">Física</td>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <td class="disciplina">Química</td>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <td class="disciplina">Biologia</td>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <td colspan="4" class="media">Média de Exatas</td>
+                <td class="vlmedia">0.0</td>
+            </tr>
+            <tr>
+                <td rowspan="2"><strong>Humanas</strong></td>
+                <td class="disciplina">História</td>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <td class="disciplina">Geografia</td>
+                <td>0.0</td>
+                <td>0.0</td>
+                <td>0.0</td>
+            </tr>
+            <tr>
+                <td colspan="4" class="media">Média de Humanas</td>
+                <td class="vlmedia">0.0</td>
+            </tr>
         </tbody>
     </table>
 </body>
