--- a/ex024/iframe002.html
+++ b/ex024/iframe002.html
@@ -21,7 +21,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad culpa cum deleniti suscipit voluptatem fugiat itaque quaerat dolor ea qui dolore id, minima voluptates ullam quae vel iste, harum quod. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, nostrum. Molestias at, natus provident quas incidunt quidem sint. Neque iusto dignissimos minima nesciunt deleniti similique placeat voluptate quibusdam fuga modi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, a dicta earum ab minus maiores atque assumenda nihil at nostrum ex ipsa labore illo aperiam? Cum est voluptas ipsum earum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus soluta ipsam excepturi. Incidunt ratione iste harum officiis, sequi quis fuga temporibus quaerat quae voluptates vero voluptatibus natus non aspernatur eveniet.</p>
 
-    <iframe src="pag01.html" frameborder="0"></iframe>
+    <iframe src="paginas-extras/pag01.html" frameborder="0">
+        <p>Infelizmente seu navegador não é compatível</p>
+    </iframe>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, ad quae neque delectus eveniet illum tempora totam eligendi saepe, dolorum architecto numquam aspernatur maiores ex inventore. Voluptatem numquam repudiandae corrupti!
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ullam sint eveniet vel atque, quos quaerat maxime voluptatem dolore fugit saepe ipsa labore soluta expedita delectus itaque impedit. Placeat, aperiam!
