--- a/ex024/iframe003.html
+++ b/ex024/iframe003.html
@@ -27,7 +27,7 @@
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae repellat sapiente deleniti facere natus! Laborum et consequuntur dignissimos beatae, facere deleniti in delectus quod corporis officia, totam nihil veniam. Qui? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, nostrum. Quaerat quibusdam laudantium itaque, voluptates, nisi aut rerum nam voluptatem eligendi rem facilis! Accusantium provident explicabo optio, fugit in molestias.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc=" <h1>Escolha uma das opções acima </h1>">
         <p>Infelizmente seu navegador não é compatível.</p>
     </iframe>
 
